--- a/index.html
+++ b/index.html
@@ -58,171 +58,190 @@
 </div>
 
 <div id="Education" class="tabcontent">
-    <div class="flex-container">
-      <h3> Certificates </h3>
-      <div class="box">
-        <div class="imgBx">
-          <img src = "assets/images/IBMlogo.png">
-        </div>
-        <div class = "content">
-          <h3> 
-            Data Science Professional Certificate 
-          </h3>
-          <p> 
-            Provides job-ready skills and techniques including data visualization, data analysis, machine learning, open source tools and libraries, methodologies, Python, databases, and SQL
-            <br>
-            <br>
-            <i>Completed February 2020</i>
-          </p>
-        </div>
+  <div class="flex-container">
+    <h3> Certificates </h3>
+    
+    <div class="box">
+      <div class="imgBx">
+        <img src = "assets/images/HarvardXLogo.png">
       </div>
-          </div>
-          <div class="flex-container">
-            <h3> College Education </h3>
-            <div class="box">
-              <div class="imgBx">
-                <img src = "assets/images/CUBoulderlogo1.png">
-              </div>
-              <div class = "content">
-                <h3> University of Colorado, Boulder   College of Arts & Sciences </h3>
-                <p> Bachelor of Arts in Mathematics, Concentration in Applicability and Statistics & French Minor 
-                <br>
-                <br>
-                <i>Completed and Graduated August 2019</i>
-                </p>
-              </div>
-            </div>  
-          </div>
-
-          <div class="flex-container">
-            <h3> High School Education </h3>
-            <div class="box">
-              <div class="imgBx">
-                <img src = "assets/images/FVhslogo.png">
-              </div>
-              <div class = "content" >
-                <h3 > Fairview High School </h3>
-                <p> 
-                  Located in Southern Boulder, Colorado, I spent the rest of my senior year at this exceptional school. 
-                  <br>
-                  <br>
-                  <i>Graduated in May 2015</i>
-                </p>
-              </div>
-            </div>
-
-            <div class="box">
-              <div class="imgBx">
-                <img src = "assets/images/Gradedlogo.png">
-              </div>
-              <div class = "content">
-                <h3> Graded School </h3>
-                <p> 
-                  Located in Sao Paolo, Brazil, I spent the second semester of Sophomore year, Junior year and a portion of Senior year at this prestigious high school.
-                </p>
-              </div>
-            </div>
-
-            <div class="box">
-              <div class="imgBx">
-                <img src = "assets/images/MHSlogo.png">
-              </div>
-              <div class = "content">
-                <h3> Millburn High School </h3>
-                <p> 
-                  Located in Millburn, New Jersey, I spent Freshman and the first semester of Sophomore year at this prestigious high school.
-                </p>
-              </div>
-            </div>
-          </div>
+      <div class = "content">
+        <h3> 
+          Computer Science for Game Development 
+        </h3>
+        <p> 
+          Provides in-depth programming experience through assignments where we create or expand on functionalities in games.
+          <br>
+          <br>
+          <i>To be Completed (Exp. October 2020</i>
+        </p>
       </div>
+    </div>
+    
+    <div class="box">
+      <div class="imgBx">
+        <img src = "assets/images/IBMlogo.png">
+      </div>
+      <div class = "content">
+        <h3> 
+          Data Science Professional Certificate 
+        </h3>
+        <p> 
+          Provides job-ready skills and techniques including data visualization, data analysis, machine learning, open source tools and libraries, methodologies, Python, databases, and SQL
+          <br>
+          <br>
+          <i>Completed February 2020</i>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="flex-container">
+    <h3> College Education </h3>
+    <div class="box">
+      <div class="imgBx">
+        <img src = "assets/images/CUBoulderlogo1.png">
+      </div>
+      <div class = "content">
+        <h3> University of Colorado, Boulder   College of Arts & Sciences </h3>
+        <p> Bachelor of Arts in Mathematics, Concentration in Applicability and Statistics & French Minor 
+        <br>
+        <br>
+        <i>Completed and Graduated August 2019</i>
+        </p>
+      </div>
+    </div>  
+  </div>
+
+  <div class="flex-container">
+    <h3> High School Education </h3>
+    <div class="box">
+      <div class="imgBx">
+        <img src = "assets/images/FVhslogo.png">
+      </div>
+      <div class = "content" >
+        <h3 > Fairview High School </h3>
+        <p> 
+          Located in Southern Boulder, Colorado, I spent the rest of my senior year at this exceptional school. 
+          <br>
+          <br>
+          <i>Graduated in May 2015</i>
+        </p>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBx">
+        <img src = "assets/images/Gradedlogo.png">
+      </div>
+      <div class = "content">
+        <h3> Graded School </h3>
+        <p> 
+          Located in Sao Paolo, Brazil, I spent the second semester of Sophomore year, Junior year and a portion of Senior year at this prestigious high school.
+        </p>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBx">
+        <img src = "assets/images/MHSlogo.png">
+      </div>
+      <div class = "content">
+        <h3> Millburn High School </h3>
+        <p> 
+          Located in Millburn, New Jersey, I spent Freshman and the first semester of Sophomore year at this prestigious high school.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
 
 
-        <div id="Work" class="tabcontent">
-          <p class="main" style="text-align: center;">
-            Click on the companies' logos to see what position I held with them and explore the work I've done!
-            <br>
-            <br>
-          </p>
+<div id="Work" class="tabcontent">
+  <p class="main" style="text-align: center;">
+    Click on the companies' logos to see what position I held with them and explore the work I've done!
+    <br>
+    <br>
+  </p>
 
-          <div class="flex-container">
-          <button class="collapsible">
-            <img src = "assets/images/OctaneXtechlogo.png" style="max-width:60%"/>
-          </button>
-          <div class="collapsiblecontent">
-            <h3> OctaneX Technologies <br> Data Science Intern </h3>
-              <p>
-                From June 2018 to June 2019, I had the pleasure of working as a Data Science Intern at OctaneX
-                 Technologies, formerly known as Standard Alcohol at the time.  As a Data Science Intern, 
-                 I performed various tasks such as software engineering, database architecture and management, 
-                 product analysis and development, data analytics, and reports generation.
-                <br>
-                <br>
-              </p>
-              <h3> OctaneX Optimizer </h3>
-              <p>
-              The first project I worked on at OctaneX Technologies was the OctaneX Optimizer. 
-              I was given the task of designing, developing, and coding the software with the creative 
-              guidance of my supervisors. This consisted of creating an easy-to-use and visually appealing 
-              tool with the purpose of optimizing fuel blends under the desired specifics of 38 constraints 
-              given a selection of over a hundred molecules through linear and non-linear programming. This 
-              involved a combination of complex mathematics implemented through code and to quickly learn 
-              previously unfamiliar programming environments. 
-              <br>
-              <br>
-              The OctaneX Optimizer has since been awarded a copyright by the U.S. Copyright Office, 
-              and a registered trademark by the U.S. Patent and Trademark Office.
-              <br>
-              <br>
-              Upon completing the software my new role in this project evolved to implementing 
-              an automatic analytic reports generator in the software and to maintain the updates 
-              of the OctaneX Optimizer. These reports would provide in-depth information on the blends 
-              concocted by the software such as logistics facilitation, actionable insights on product 
-              development, and serve as quality control to present potential improvements in calculations.
-              </p>
-          </div>
+  <div class="flex-container">
+    <button class="collapsible">
+      <img src = "assets/images/OctaneXtechlogo.png" style="max-width:60%"/>
+    </button>
+    <div class="collapsiblecontent">
+      <h3> OctaneX Technologies <br> Data Science Intern </h3>
+        <p>
+          From June 2018 to June 2019, I had the pleasure of working as a Data Science Intern at OctaneX
+            Technologies, formerly known as Standard Alcohol at the time.  As a Data Science Intern, 
+            I performed various tasks such as software engineering, database architecture and management, 
+            product analysis and development, data analytics, and reports generation.
           <br>
           <br>
-          <button class="collapsible">
-            <img src = "assets/images/CUBoulderlogo.png" style="max-width:60%"/>
-          </button>
-          <div class="collapsiblecontent">
-            <h3> Department of French and Italian <br> French Tutor </h3>
-            <p>As a French Tutor at the university, I developed and implemented comprehensive lesson plans 
-              for students of lower and higher division levels.
-              <br>
-              <br>
-              From September 2016 to March 2018, I worked as a tutor at the Department of French and 
-              Italian at the University of Colorado, Boulder. I provided services to students of all levels, 
-              ranging from beginner levels to Master’s levels. As a French native who learned a few other 
-              languages growing up, I have a good sense of what commonalities in certain languages pose problems 
-              to speakers of languages with different grammatical structures. This motivated me to design level 
-              assessments for my students to measure their capabilities in French by topics and pinpoint the 
-              areas of improvement that aligned with the areas they wanted to improve. I also provided 
-              revisions to students’ papers and assisted them in developing their own voice in French in the 
-              form of writing. 
-            </p>
-          </div>
-          <br>
-          <br>
-          <button class="collapsible">
-          <img src = "assets/images/AGVlogo1.png" style="max-width:40%"/>
-          </button>
-          <div class="collapsiblecontent">
-            <h3> Aspen Growth Ventures, LLC <br> Data Analystics Intern </h3>
-            <p>As a Data Analytics Intern at AGV, my role included database creation and management, 
-              product design and development, and data analytics. I was tasked with developing and 
-              implementing an environment for real-time data uptake from market data sources in the energy 
-              and specialty chemicals sector that would perform different analyses. This project merged SQL 
-              organization and Python package methodologies to create an easy-to-use database that used SQL 
-              queries to navigate, and Python package methods to provide visualizations, regression analysis, 
-              inferential statistics, hypothesis testing, and forecasting on data that it would append 
-              in real-time. The goal of this project was to faciliate screening and analyzing market data as 
-              part of a due diligence process for a private equity fund.
-            </p>
-          </div>
-         </div> 
-        </div>
+        </p>
+        <h3> OctaneX Optimizer </h3>
+        <p>
+        The first project I worked on at OctaneX Technologies was the OctaneX Optimizer. 
+        I was given the task of designing, developing, and coding the software with the creative 
+        guidance of my supervisors. This consisted of creating an easy-to-use and visually appealing 
+        tool with the purpose of optimizing fuel blends under the desired specifics of 38 constraints 
+        given a selection of over a hundred molecules through linear and non-linear programming. This 
+        involved a combination of complex mathematics implemented through code and to quickly learn 
+        previously unfamiliar programming environments. 
+        <br>
+        <br>
+        The OctaneX Optimizer has since been awarded a copyright by the U.S. Copyright Office, 
+        and a registered trademark by the U.S. Patent and Trademark Office.
+        <br>
+        <br>
+        Upon completing the software my new role in this project evolved to implementing 
+        an automatic analytic reports generator in the software and to maintain the updates 
+        of the OctaneX Optimizer. These reports would provide in-depth information on the blends 
+        concocted by the software such as logistics facilitation, actionable insights on product 
+        development, and serve as quality control to present potential improvements in calculations.
+        </p>
+    </div>
+    <br>
+    <br>
+    <button class="collapsible">
+      <img src = "assets/images/CUBoulderlogo.png" style="max-width:60%"/>
+    </button>
+    <div class="collapsiblecontent">
+      <h3> Department of French and Italian <br> French Tutor </h3>
+      <p>As a French Tutor at the university, I developed and implemented comprehensive lesson plans 
+        for students of lower and higher division levels.
+        <br>
+        <br>
+        From September 2016 to March 2018, I worked as a tutor at the Department of French and 
+        Italian at the University of Colorado, Boulder. I provided services to students of all levels, 
+        ranging from beginner levels to Master’s levels. As a French native who learned a few other 
+        languages growing up, I have a good sense of what commonalities in certain languages pose problems 
+        to speakers of languages with different grammatical structures. This motivated me to design level 
+        assessments for my students to measure their capabilities in French by topics and pinpoint the 
+        areas of improvement that aligned with the areas they wanted to improve. I also provided 
+        revisions to students’ papers and assisted them in developing their own voice in French in the 
+        form of writing. 
+      </p>
+    </div>
+    <br>
+    <br>
+    <button class="collapsible">
+    <img src = "assets/images/AGVlogo1.png" style="max-width:40%"/>
+    </button>
+    <div class="collapsiblecontent">
+      <h3> Aspen Growth Ventures, LLC <br> Data Analystics Intern </h3>
+      <p>As a Data Analytics Intern at AGV, my role included database creation and management, 
+        product design and development, and data analytics. I was tasked with developing and 
+        implementing an environment for real-time data uptake from market data sources in the energy 
+        and specialty chemicals sector that would perform different analyses. This project merged SQL 
+        organization and Python package methodologies to create an easy-to-use database that used SQL 
+        queries to navigate, and Python package methods to provide visualizations, regression analysis, 
+        inferential statistics, hypothesis testing, and forecasting on data that it would append 
+        in real-time. The goal of this project was to faciliate screening and analyzing market data as 
+        part of a due diligence process for a private equity fund.
+      </p>
+    </div>
+  </div> 
+</div>
 
 
 
