--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           Provides in-depth programming experience through assignments where we create or expand on functionalities in games.
           <br>
           <br>
-          <i>To be Completed (Exp. October 2020</i>
+          <i>To be Completed (Exp. October 2020)</i>
         </p>
       </div>
     </div>
@@ -246,112 +246,117 @@
 
 
 
-        <div id="Skills" class="tabcontent" style="margin-bottom:450px;">
-          <div class="container">
-            <div class="icon">
-                <div class="iconBx active" data-id = "content1">
-                <h3> Languages </h3>
-                  </div>
-              </div>
-            <div class="icon">
-                <div class="iconBx" data-id = "content2">
-                <h3> Microsoft Office </h3>
-                  </div>
-              </div>
-            <div class="icon">
-                <div class="iconBx" data-id = "content3">
-                <h3> Programming </h3>
-                  </div>
-              </div>
-              <div class="icon">
-                <div class="iconBx" data-id = "content4">
-                <h3> Data Science </h3>
-                  </div>
-              </div>
-              <div class="icon">
-                <div class="iconBx" data-id = "content5">
-                  <h3> Web Development </h3>
-                </div>
-              </div>
+<div id="Skills" class="tabcontent" style="margin-bottom:450px;">
+  <div class="container">
+    <div class="icon">
+        <div class="iconBx active" data-id = "content1">
+        <h3> Languages </h3>
           </div>
-
-          <div class="content">
-            <div class="contentBx active" id="content1">
-                <div>
-                  <div class="Text">
-                    <h2> Languages </h2>     
-                    <p> French </p><span class="bar"><span class="french"></span></span>
-                    <p> English </p><span class="bar"><span class="english"></span></span>
-                    <p> Spanish </p><span class="bar"><span class="spanish"></span></span>
-                    <p> Portuguese </p><span class="bar"><span class="portuguese"></span></span>
-                    <p> Italian </p><span class="bar"><span class="italian"></span></span>
-                    <p> Russian </p><span class="bar"><span class="russian"></span></span>
-                    <br>
-                    <br>
-                  </div>
-                </div>
-              </div>
-              <div class="contentBx"  id="content2">
-                <div>
-                  <div class="Text">
-                    <h2> Microsoft Office </h2>
-                    <p> Excel </p><span class="bar"><span class="excel"></span></span>
-                    <p> PowerPoint </p><span class="bar"><span class="powerpoint"></span></span>
-                    <p> Word </p><span class="bar"><span class="word"></span></span>
-                    <p> VBA </p><span class="bar"><span class="VBA"></span></span>
-                    <br>
-                    <br>
-                  </div>
-                </div>
-              </div>
-              <div class="contentBx" id="content3">
-                <div>
-                    <div class="Text">
-                      <h2> Programming </h2>
-                      <p> Python </p><span class="bar"><span class="python"></span></span>
-                      <p> C++ </p><span class="bar"><span class="cplusplus"></span></span>
-                      <p> C </p><span class = "bar"><span class="C"></span></span>
-                      <p> Lua </p><span class="bar"><span class="lua"></span></span>
-                      <br>
-                      <br>
-                    </div>
-                  </div>
-              </div>
-              <div class="contentBx" id="content4">
-                <div>
-                    <div class="Text">
-                      <h2> Data Science </h2>
-                      <h3> Python Packages</h3>
-                      <p> NumPy </p><span class="bar"><span class="numpy"></span></span>
-                      <p> Pandas </p><span class="bar"><span class="pandas"></span></span>
-                      <p> SciPy </p><span class="bar"><span class="scipy"></span></span>
-                      <p> Matplotlib </p><span class="bar"><span class="matplotlib"></span></span>
-                      <p> Seaborn </p><span class="bar"><span class="seaborn"></span></span>
-                      <p> Scikit-learn </p><span class="bar"><span class="scikitlearn"></span></span>
-                      <p> Statsmodels </p><span class="bar"><span class="statsmodels"></span></span>
-                      <h3> Other </h3>
-                      <p> SQL </p><span class="bar"><span class="sql"></span></span>
-                      <p> R/Rstudio </p><span class="bar"><span class="rstudio"></span></span>
-                      <p> Matlab </p><span class="bar"><span class="matlab"></span></span>
-                      <br>
-                      <br>
-                    </div>
-                  </div>
-              </div>
-              <div class="contentBx" id="content5">
-                <div>
-                  <div class="Text">
-                      <h2> Web Development </h2>
-                      <p> HTML </p><span class="bar"><span class="html"></span></span>
-                      <p> CSS3 </p><span class="bar"><span class="css"></span></span>
-                      <p> JavaScript </p><span class="bar"><span class="javascript"></span></span>
-                      <br>
-                      <br>
-                  </div>
-                </div>
-              </div>
+      </div>
+    <div class="icon">
+        <div class="iconBx" data-id = "content2">
+        <h3> Microsoft Office </h3>
           </div>
+      </div>
+    <div class="icon">
+        <div class="iconBx" data-id = "content3">
+        <h3> Programming </h3>
+          </div>
+    </div>
+    <div class="icon">
+      <div class="iconBx" data-id = "content4">
+      <h3> Data Science </h3>
         </div>
+    </div>
+    <div class="icon">
+      <div class="iconBx" data-id = "content5">
+        <h3> Web Development </h3>
+      </div>
+    </div>
+  </div>
+
+  <div class="content">
+    <div class="contentBx active" id="content1">
+      <div>
+        <div class="Text">
+          <h2> Languages </h2>     
+          <p> French </p><span class="bar"><span class="french"></span></span>
+          <p> English </p><span class="bar"><span class="english"></span></span>
+          <p> Spanish </p><span class="bar"><span class="spanish"></span></span>
+          <p> Portuguese </p><span class="bar"><span class="portuguese"></span></span>
+          <p> Italian </p><span class="bar"><span class="italian"></span></span>
+          <p> Russian </p><span class="bar"><span class="russian"></span></span>
+          <br>
+          <br>
+        </div>
+      </div>
+    </div>
+
+    <div class="contentBx"  id="content2">
+      <div>
+        <div class="Text">
+          <h2> Microsoft Office </h2>
+          <p> Excel </p><span class="bar"><span class="excel"></span></span>
+          <p> PowerPoint </p><span class="bar"><span class="powerpoint"></span></span>
+          <p> Word </p><span class="bar"><span class="word"></span></span>
+          <p> VBA </p><span class="bar"><span class="VBA"></span></span>
+          <br>
+          <br>
+        </div>
+      </div>
+    </div>
+
+    <div class="contentBx" id="content3">
+      <div>
+        <div class="Text">
+          <h2> Programming </h2>
+          <p> Python </p><span class="bar"><span class="python"></span></span>
+          <p> C++ </p><span class="bar"><span class="cplusplus"></span></span>
+          <p> C </p><span class = "bar"><span class="C"></span></span>
+          <p> C# </p><span class = "bar"><span class="csharp"></span></span>
+          <p> Lua </p><span class="bar"><span class="lua"></span></span>
+          <br>
+          <br>
+        </div>
+      </div>
+    </div>
+
+    <div class="contentBx" id="content4">
+      <div>
+        <div class="Text">
+          <h2> Data Science </h2>
+          <h3> Python Packages</h3>
+          <p> NumPy </p><span class="bar"><span class="numpy"></span></span>
+          <p> Pandas </p><span class="bar"><span class="pandas"></span></span>
+          <p> SciPy </p><span class="bar"><span class="scipy"></span></span>
+          <p> Matplotlib </p><span class="bar"><span class="matplotlib"></span></span>
+          <p> Seaborn </p><span class="bar"><span class="seaborn"></span></span>
+          <p> Scikit-learn </p><span class="bar"><span class="scikitlearn"></span></span>
+          <p> Statsmodels </p><span class="bar"><span class="statsmodels"></span></span>
+          <h3> Other </h3>
+          <p> SQL </p><span class="bar"><span class="sql"></span></span>
+          <p> R/Rstudio </p><span class="bar"><span class="rstudio"></span></span>
+          <p> Matlab </p><span class="bar"><span class="matlab"></span></span>
+          <br>
+          <br>
+        </div>
+      </div>
+    </div>
+
+    <div class="contentBx" id="content5">
+      <div>
+        <div class="Text">
+            <h2> Web Development </h2>
+            <p> HTML </p><span class="bar"><span class="html"></span></span>
+            <p> CSS3 </p><span class="bar"><span class="css"></span></span>
+            <p> JavaScript </p><span class="bar"><span class="javascript"></span></span>
+            <br>
+            <br>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
