--- a/index.html
+++ b/index.html
@@ -372,7 +372,19 @@
       </h2>
     </button>
     <div class = "collapsiblecontent" style = "float:center">
-      <br>
+      <h4> Assignments </h4>
+        <p>
+          The Computer Science for Game Development Certificate on edX provides two courses to immerse
+          the candidates into game development. The first course is a preliminary college course on the
+          fundamentals of Computer Science. The second course, GD50, is the main one in the certificate 
+          and provides 11 assignments with the inclusion of a final project for candidates to complete 
+          the course. The first 8 assignments are made in Lua to be used on the Love2D platform, version 10.2.
+          The last three are on Unity and use C# for scripting. 
+          If you are curious about what these are, you can find my work on these assignments 
+          <a href="https://github.com/GeorgesABrunet/gd-50">here!</a>
+        </p>
+    </div>
+      <!--<br>
       <button class = "collapsible" style = "width: 100%; margin: auto">
         <h3 style = "font-family: Montserrat;"> Assignment 0: Pong </h3>
       </button>
@@ -504,7 +516,7 @@
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
             mollit anim id est laborum.</p>
       </div>
-    </div>
+    </div>-->
     
   <!--</div> 
 
