--- a/index.html
+++ b/index.html
@@ -368,7 +368,38 @@
   <div class = "flex-container">
     <button class="collapsible">
       <h2 style = "font-family: Montserrat;">
-        HarvardX Computer Science for Game Development <br> Assignments
+        Game Jams
+      </h2>
+    </button>
+    <div class = "collapsiblecontent" style = "float:center">
+      <h3> I love Game Jams! </h3>
+        <p>
+          Game Jams are my favorite way to explore ideas, improve my skills, and test my time-crunching skills!
+          I highly recommend for anyone looking to delve into game development to hop in to any Game Jam and 
+          try out anything. Whether you prefer gameplay implementation, or creating an immersive feel through art, 
+          these friendly events are a great way to team up with friends or strangers (or even go alone) and try out 
+          whatever interests you. <br>
+          I have participated in a few Game Jams and intend to participate in many more in the future. You can find my 
+          independent or group submissions below! 
+        </p>
+        <h4>My First Game Jam: Summer 2020</h4>
+        <p> 
+          <a href="https://pootmoop-studio.itch.io/diaperchange">Diaper Change</a>
+        </p>
+        <h4>Extra Credits Game Jam #6</h4>
+        <p> 
+          <a href="https://pootmoop-studio.itch.io/man-down">Man Down</a>
+        </p>
+        <h4>Great Harvest Game Jam</h4>
+        <p> 
+          <a href="https://pootpootpoot.itch.io/oubliettes">Oubliettes</a>
+        </p>
+    </div>
+
+
+    <button class="collapsible">
+      <h2 style = "font-family: Montserrat;">
+        HarvardX Computer Science for Game Development
       </h2>
     </button>
     <div class = "collapsiblecontent" style = "float:center">
@@ -384,143 +415,8 @@
           <a href="https://github.com/GeorgesABrunet/gd-50">here!</a>
         </p>
     </div>
-      <!--<br>
-      <button class = "collapsible" style = "width: 100%; margin: auto">
-        <h3 style = "font-family: Montserrat;"> Assignment 0: Pong </h3>
-      </button>
-      <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.</p>
-      </div>
-      <br>
-      <button class = "collapsible"  style = "width: 100%; margin: auto">
-        <h3 style = "font-family: Montserrat;"> Assignment 1: Flappy Bird </h3>
-      </button>
-      <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.</p>
-      </div>
-      <br>
-      <button class = "collapsible"  style = "width: 100%; margin: auto">
-        <h3 style = "font-family: Montserrat;"> Assignment 2: Breakout </h3>
-      </button>
-      <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.</p>
-      </div>
-      <br>
-      <button class = "collapsible"  style = "width: 100%; margin: auto">
-        <h3 style = "font-family: Montserrat;"> Assignment 3: Match 3 </h3>
-      </button>
-      <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.</p>
-      </div>
-      <br>
-      <button class = "collapsible"  style = "width: 100%; margin: auto">
-        <h3 style = "font-family: Montserrat;"> Assignment 4: Super Mario Bros </h3>
-      </button>
-      <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.</p>
-      </div>
-      <br>
-      <button class = "collapsible"  style = "width: 100%; margin: auto">
-        <h3 style = "font-family: Montserrat;"> Assignment 5: Legend of Zelda </h3>
-      </button>
-      <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.</p>
-      </div>
-      <br>
-      <button class = "collapsible"  style = "width: 100%; margin: auto">
-        <h3 style = "font-family: Montserrat;"> Assignment 6: Angry Birds </h3>
-      </button>
-      <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.</p>
-      </div>
-      <br>
-      <button class = "collapsible"  style = "width: 100%; margin: auto">
-        <h3 style = "font-family: Montserrat;"> Assignment 7: Pokemon </h3>
-      </button>
-      <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.</p>
-      </div>
-      <br>
-      <button class = "collapsible"  style = "width: 100%; margin: auto">
-        <h3 style = "font-family: Montserrat;"> Assignment 8: 3D Helicopter Game </h3>
-      </button>
-      <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.</p>
-      </div>
-      <br>
-      <button class = "collapsible"  style = "width: 100%; margin: auto">
-        <h3 style = "font-family: Montserrat;"> Assignment 9: Dreadhalls </h3>
-      </button>
-      <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.</p>
-      </div>
-      <br>
-      <button class = "collapsible"  style = "width: 100%; margin: auto">
-        <h3 style = "font-family: Montserrat;"> Assignment 10: Portal </h3>
-      </button>
-      <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.</p>
-      </div>
-    </div>-->
-    
-  <!--</div> 
+      
 
-  <div class="flex-container">-->
     <button class="collapsible">
       <h2 style="font-family: Montserrat;"> IBM Data Science Professional Certificate <br> Capstone Project </h2>
     </button>
