--- a/index.html
+++ b/index.html
@@ -382,6 +382,11 @@
           I have participated in a few Game Jams and intend to participate in many more in the future. You can find my 
           independent or group submissions below! 
         </p>
+        <button class="collapsible">
+          <h2 style = "font-family: Montserrat;">
+            <a href="https://pootmoop-studio.itch.io/diaperchange">Diaper Change</a>
+          </h2>
+        </button>
         <h4>My First Game Jam: Summer 2020</h4>
         <p> 
           <a href="https://pootmoop-studio.itch.io/diaperchange">Diaper Change</a>
