--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
           I have participated in a few Game Jams and intend to participate in many more in the future. You can find my 
           independent or group submissions below! 
         </p>
-        <button class="collapsible">
+        <button class="collapsible" style = "float:center">
           <h2 style = "font-family: Montserrat;">
             <a href="https://pootmoop-studio.itch.io/diaperchange">Diaper Change</a>
           </h2>
