--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
           independent or group submissions below! 
         </p>
         <button class="collapsible" style = "margin:auto">
+          <h4>My First Game Jam: Summer 2020</h4>
           <h2 style = "font-family: Montserrat;">
             <a href="https://pootmoop-studio.itch.io/diaperchange">Diaper Change</a>
           </h2>
