--- a/index.html
+++ b/index.html
@@ -382,11 +382,11 @@
           I have participated in a few Game Jams and intend to participate in many more in the future. You can find my 
           independent or group submissions below! 
         </p>
-        <button class="collapsible" style = "margin:auto">
-          <h4>My First Game Jam: Summer 2020</h4>
-          <h2 style = "font-family: Montserrat;">
+        <button class="collapsible" style = "width:auto; margin:auto">
+          <h2 style = "font-family: Montserrat;">My First Game Jam: Summer 2020</h2>
+          <h4 style = "font-family: Montserrat;">
             <a href="https://pootmoop-studio.itch.io/diaperchange">Diaper Change</a>
-          </h2>
+          </h4>
         </button>
         <h4>My First Game Jam: Summer 2020</h4>
         <p> 
